--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 /* Resets - configurações iniciais da nossa folha de estilo - início
 	** 'Zeramos' as margens e padding, declaramos que as medidas (width, height) serão definidas pelas bordas.
 	** No nosso caso, em que utilizaremos a rolagem (scroll) - por se tratar de um site single page -,
@@ -68,4 +66,8 @@
 	.btn.btn-dark:hover {
 		background-color: rgba(52,58,64,0.3);
 		border: 2px solid #fff;
-	}*/
+  }*/
+  
+  .com-sombra {
+    filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.5));
+  }
